fix spacing issue

--- a/src/styles/table.scss
+++ b/src/styles/table.scss
@@ -28,10 +28,24 @@ $table-cell-border: 1px solid $color-light-gray;
 		left: -9999px;
   }
 
+  tr {
+    margin-top: $space-normal;
+  }
+
   td {
     position: relative;
     text-align: right !important;
-	}
+  }
+
+  td:first-child {
+    border-top-left-radius: $space-smaller;
+    border-top-right-radius: $space-smaller;
+  }
+
+  td:last-child {
+    border-bottom-left-radius: $space-smaller;
+    border-bottom-right-radius: $space-smaller;
+  }
 
 	td:before {
 		position: absolute;
